modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <header>
       <nav class="nav-wrapper">
         <div class="nav-container">
-          <span class="material-icons">
-            <img src="images/baseline_density_medium_black_24dp.png" alt="nav-ham" class="ham">
-          </span>
+          <h2>Irish Delos Santos</h2>
           <ul class="nav-list">
             <li class="nav-link home">
-              <a src="#">Home</a>
+              <a href="#" class="link">Home</a>
             </li>
             <li class="nav-link skills">
               Skills</li>
