modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h2>Irish Delos Santos</h2>
           <ul class="nav-list">
             <li class="nav-link home">
-              <a href="#" class="link">Home</a>
+              Home
             </li>
             <li class="nav-link skills">
               Skills</li>
@@ -36,10 +36,20 @@
       </div>
 
       <div class="skills">
-        
+        <div >
+          HTML
+          CSS
+          JavaScript
+          React
+          Node
+          Vue
+          Angular
+        </div>
       </div>
 
       <div class="projects">
+        Simple Online Store 
+
 
       </div>
 
